ingress-reunion.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reunion-web
  namespace: reunion
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: goodmanreunion.duckdns.org
      http:
        paths:
          - path: /reunion(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: reunion-web
                port:
                  number: 80
