robot-shop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: robot-shop-default
  namespace: robot-shop
spec:
  ingressClassName: nginx
  tls:
    - secretName: ingress-selfsigned
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: invalid-page
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: robot-shop-assets
  namespace: robot-shop
spec:
  ingressClassName: nginx
  tls:
    - secretName: ingress-selfsigned
  rules:
    - http:
        paths:
          - path: /css(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: web
                port:
                  number: 8080
          - path: /js(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: web
                port:
                  number: 8080
          - path: /media(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: web
                port:
                  number: 8080
          - path: /fonts(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: web
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: robot-shop-web
  namespace: robot-shop
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - secretName: ingress-selfsigned
  rules:
    - http:
        paths:
          - path: /web(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: web
                port:
                  number: 8080
